@@ -52,15 +52,20 @@ AC_SUBST(NOTMAINT)dnl
 # Do we have a single-tree copy of texinfo?  Even if we do, we can't
 # rely on it - libiberty is built before texinfo.
 AC_CHECK_PROG(MAKEINFO, makeinfo, makeinfo, )
-BUILD_INFO=info
-case x"`$MAKEINFO --version | grep 'GNU texinfo'`" in
-  x*\ [[1-3]].* )
-    MAKEINFO="@echo $MAKEINFO is too old, 4.0 or newer required ;true"
+if test "x$MAKEINFO" = "x"; then
+    MAKEINFO="@echo makeinfo missing; true"
     BUILD_INFO=
-    AC_MSG_WARN([
+else
+    BUILD_INFO=info
+    case x"`$MAKEINFO --version | grep 'GNU texinfo'`" in
+      x*\ [[1-3]].* )
+	MAKEINFO="@echo $MAKEINFO is too old, 4.0 or newer required; true"
+	BUILD_INFO=
+	AC_MSG_WARN([
 *** Makeinfo is too old. Info documentation will not be built.])
-    ;;
-esac
+	;;
+    esac
+fi
 AC_SUBST(MAKEINFO)
 AC_SUBST(BUILD_INFO)
 
